--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
 </head>
 <body>
   <div class="wrapper">
-    <!-- HEADER -->
-    <!-- SUB HEAD -->
-
+    <h1>Welcome to Riyadh</h1><!-- HEADER -->
+    <h2>Where A Traditional Past Meets A Modern Future.</h2><!-- SUB HEAD -->
     <div id="content">
-      <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
+      <img src="./images/transportation/transit.jpg" alt="Modern Transit"/><!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
+      <h3>Travel</h3>
+      <p>Once a mudbrick waystation along desert tradin routes,</p>
+      <h3>History</h3>
+      <p>Riyadh is now one of the wealthiest cities in the world.</p>
+      <img src="./images/garden.jpg" alt="Riyadh Garden"/>
+      <p>The city is divided into 15 municipal districts</p>
+      <img src="./images/transportation/camels-in-truck.jpg" alt="The roads of Riyadh"/>
+      <h3>Sources</h3>
+      <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">lonelyplanet</a>
+      <a href="http://en.wikipedia.org/wiki/Riyadh">wikipedia</a>
     </div>
   </div>
 </body>
